logo, correct form

--- a/layouts/_default/contact.html
+++ b/layouts/_default/contact.html
@@ -42,7 +42,7 @@
   {{- end }}
 
   <div class="post-form">
-    <form action="https://formspree.io/f/mbdkprwl" method="POST" class="contact-form">
+    <form action="https://formspree.io/f/mgolejvp" method="POST" class="contact-form">
       <label for="name">Namn:</label>
       <input type="text" id="name" name="name" required>
 
