--- a/layouts/_default/contact.html
+++ b/layouts/_default/contact.html
@@ -46,6 +46,9 @@
       <label for="name">Namn:</label>
       <input type="text" id="name" name="name" required>
 
+      <label for="tel">E-postadress:</label>
+      <input type="tel" id="tel" name="tel" required>
+
       <label for="email">E-postadress:</label>
       <input type="email" id="email" name="email" required>
 
