--- a/layouts/_default/contact.html
+++ b/layouts/_default/contact.html
@@ -46,7 +46,7 @@
       <label for="name">Namn:</label>
       <input type="text" id="name" name="name" required>
 
-      <label for="tel">E-postadress:</label>
+      <label for="tel">Telefonnummer:</label>
       <input type="tel" id="tel" name="tel" required>
 
       <label for="email">E-postadress:</label>
