--- a/assets/css/extended/contact.css
+++ b/assets/css/extended/contact.css
@@ -9,6 +9,7 @@
 
 /* Inputs, Textarea, and Select */
 .contact-form input[type="text"],
+.contact-form input[type="tel"],
 .contact-form input[type="email"],
 .contact-form textarea {
     width: 100%;
