--- a/layouts/_default/contact.html
+++ b/layouts/_default/contact.html
@@ -46,11 +46,14 @@
       <label for="name">Namn:</label>
       <input type="text" id="name" name="name" required>
 
-      <label for="tel">Telefonnummer:</label>
-      <input type="tel" id="tel" name="tel" required>
+      <label for="phone">Telefonnummer:</label>
+      <input type="tel" id="phone" name="phone" required>
 
       <label for="email">E-postadress:</label>
       <input type="email" id="email" name="email" required>
+      
+      <label for="address">Adress:</label>
+      <input type="text" id="address" name="address">
 
       <label for="message">Meddelande:</label>
       <textarea id="message" name="message" rows="5" required></textarea>
