--- a/assets/css/extended/index.css
+++ b/assets/css/extended/index.css
@@ -6,7 +6,7 @@
       rgba(97, 111, 145, 0.75),
       rgba(15, 23, 42, 0.75)
     ),
-    url("/images/uppsalasiluett.png") bottom / contain no-repeat;
+    url("../../images/uppsalasiluett.png") bottom / contain no-repeat;
   color: #ffffff;
   margin: calc(0px - var(--gap) - 30px) min(calc(0px - (((100vw - var(--main-width)) / 2)) - var(--gap)), calc(0px - var(--gap))) 0;
   padding: 0 max(calc((((100vw - var(--main-width)) / 2)) + var(--gap)), var(--gap)) 0;
